# traktogram

./: .gitignore  Dockerfile  Makefile  Procfile  docker-compose.yml  pm2.yml  pyproject.toml  pytest.ini  requirements.txt  supervisord.conf
.envs/: example.env
.git-hooks/: post-receive
.github/workflows/: test.yml
teletrakt/: app.py  commands.py  config.py  store.py  trakt.py  updater.py
tests/: conftest.py  manual.py  test_anime.py  test_models.py  test_rendering.py  test_storage.py  test_store.py  test_utils.py
tests/services/: test_anime.py
tests/trakt/: test_models.py  test_utils.py
traktogram/: anime.py  bot.py  client.py  commands.py  config.py  dispatcher.py  entry.py  filters.py  logging_setup.py  markup.py  middlewares.py  models.py  rendering.py  router.py  storage.py  store.py  trakt.py  updater.py  utils.py  worker.py
traktogram/handlers/: __init__.py  auth.py  commands.py  error.py  notifications.py  utils.py
traktogram/services/: __init__.py  anime.py  notification.py  notifications.py  ops.py  session.py  torrent.py  trakt.py
traktogram/templates/: auth_message.html  calendar_multi_notification.html  calendar_notification.html  episode_title.html  shows_list.html
traktogram/trakt/: __init__.py  client.py  models.py  utils.py
