[tool.poetry]
name = "teletrakt"
version = "0.1.0"
description = ""
authors = ["Bachynin Ivan <bachynin.i@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
redis = "^3.3.11"
python-dotenv = "^0.10.5"
colorlog = "^4.1.0"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}
aiogram = "^2.6.1"
ujson = "^1.35"
uvloop = "^0.14.0"
arq = "^0.18.4"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
