[tool.poetry]
name = "teletrakt"
version = "0.1.0"
description = ""
authors = ["Bachynin Ivan <bachynin.i@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
colorlog = "^4.1.0"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
aiogram = "^2.6.1"
ujson = "^1.35"
uvloop = "^0.14.0"
arq = "^0.18.4"
watchgod = "^0.6"
jinja2 = "^2.11.1"
lxml = "^4.5.0"
python-dotenv = "^0.11.0"
python-slugify = "^4.0.0"
pydantic = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.8.1"
pytest-asyncio = "^0.10.0"
pytest-aiohttp = "^0.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
